chore: fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,8 @@ html {
 }
 
 body {
+    overflow: hidden;
+
     position: relative;
     margin: 0;
     padding: 0;
@@ -124,9 +126,6 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color);
     /* perspective: 1500px; */
-
-    overflow-x: hidden;
-    overflow-y: auto;
 
     font-weight: 500;
     font-style: normal;
